src/css/index.css
body {
    background-color: #00AAEE;
    padding: 20px;
    margin: 0;
  }
  h1, h2, p, ul, li {
    font-family: sans-serif;
  }
  ul.header li {
    display: inline;
    list-style-type: none;
    margin: 0;
  }
  ul.header {
    background-color: #111;
    padding: 0;
  }
  ul.header li a {
    color: #FFF;
    font-weight: bold;
    text-decoration: none;
    padding: 20px;
    display: inline-block;
  }

.products {
  padding: 5px;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
}

.product h5 {
  padding-top: 20px;
}

.product p {
  font-size: 12px;
  margin: 0;
}

.product img {
  width: 100%;
}

.blog {
  padding: 0px;
}

.blog h5 {
  padding-top: 20px;
}

.blog li {
  font-size: 12px;
  margin: 0;
}

.blog p {
  font-size: 12px;
  margin: 0;
}

  .active {
    background-color: #0099FF;
  }
  .content {
    background-color: #FFF;
    padding: 20px;
  }
  .content h2 {
    padding: 0;
    margin: 0;
  }
  .content li {
    margin-bottom: 10px;
  }

